Update Serializer.java
добавил комментарии;
заменил CurrentClass.newInstance()  на CurrentClass.getDeclaredConstructor().newInstance()